# AI-recorder

./: .env.example  README.md  USAGE.md  ai_recorder.db  demo.py  main.py  pyproject.toml
app/: __init__.py  api.py  database.py  models.py  services.py
src/ai_recorder/: __init__.py  cli.py  config.py  transcriber.py
templates/: index.html
transcripts/: 23e5733c-8855-4dbb-adb2-04d1c6a0dbc7.json
uploads/: 03f6dc25-1214-4799-becc-0221588d97f8_demo_audio.txt  d3b6fb38-90b8-4a44-98b5-0985ab9c8ac0_demo_audio.txt
