[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-recorder"
version = "0.1.0"
description = "AI-enhanced recorder transcription CLI using AssemblyAI"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "AI Assistant"}]
dependencies = [
    "assemblyai>=0.33.0",
    "typer[all]>=0.12.3",
    "python-dotenv>=1.0.1",
    "rich>=13.7.1",
]

[project.scripts]
ai-recorder = "ai_recorder.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

